methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:8: error: ';' expected but ',' found.
      backward(), left();forward();
                ^